@@ -37,9 +37,9 @@ Allocator::allocate(size_t bytes)
 
   UMPIRE_LOG(Debug, "(" << bytes << ")");
 
-  UMPIRE_REPLAY( "allocate," << bytes << "," << m_allocator);
   ret = m_allocator->allocate(bytes);
-  UMPIRE_REPLAY_CONT( ret << "\n");
+
+  UMPIRE_REPLAY("allocate" << "," << bytes << "," << m_allocator << "," << ret);
 
   UMPIRE_RECORD_STATISTIC(getName(), "ptr", reinterpret_cast<uintptr_t>(ret), "size", bytes, "event", "allocate");
   return ret;
@@ -48,7 +48,7 @@ Allocator::allocate(size_t bytes)
 void
 Allocator::deallocate(void* ptr)
 {
-  UMPIRE_REPLAY( "deallocate," << ptr << "," << m_allocator << "\n");
+  UMPIRE_REPLAY("deallocate," << ptr << "," << m_allocator);
 
   UMPIRE_LOG(Debug, "(" << ptr << ")");
 
@@ -65,7 +65,7 @@ Allocator::deallocate(void* ptr)
 void
 Allocator::release()
 {
-  UMPIRE_REPLAY("release," <<  m_allocator << "\n");
+  UMPIRE_REPLAY("release," <<  m_allocator);
 
   UMPIRE_LOG(Debug, "");
 
