@@ -118,7 +118,6 @@ ResourceManager::initialize()
   UMPIRE_REPLAY( "Umpire v" << UMPIRE_VERSION_MAJOR 
       << "." << UMPIRE_VERSION_MINOR
       << "." << UMPIRE_VERSION_PATCH);
-  UMPIRE_REPLAY_CONT("\n");
 
   resource::MemoryResourceRegistry& registry =
     resource::MemoryResourceRegistry::getInstance();
