@@ -115,7 +115,7 @@ DynamicPool::getPlatform() noexcept
 void
 DynamicPool::coalesce() noexcept
 {
-  UMPIRE_REPLAY( "coalesce," << getName() << "\n");
+  UMPIRE_REPLAY( "coalesce," << getName());
   dpa->coalesce();
 }
 
