@@ -61,3 +61,7 @@ this.
 - `make docs` used to fail, because the build was setup for Read the Docs. A fix
 was implemented so Doxygen and Sphinx can be run locally, for instance to test
 out new cookbooks.
+
+- REPLAY previously recorded some operations with multiple print statements
+causing REPLAY output from MPI runs to become mixed between multiple ranks.
+REPLAY has been modified to output each operation onto a single line.
